# p5netcdf

./: .pre-commit-config.yaml  .pydocstyle.ini  .readthedocs.yaml  Changelog.rst  README.md  pyproject.toml
docs/: Makefile  custom.css  make.bat
docs/source/: api_dataset.rst  api_dimension.rst  api_group.rst  api_reference.rst  api_variable.rst  changelog.rst  conf.py  contributing.rst  dataset.rst  datasets_backends.rst  dimension.rst  genindex.rst  group.rst  index.rst  installation.rst  introduction.rst  quickstart.rst  variable.rst
p5netcdf/: __init__.py  p5netcdf.py
p5netcdf/utils/: utils_general.py  utils_hdf5.py  utils_um.py  utils_zarr.py
src/p5netcdf/: __init__.py  p5netcdf.py
src/p5netcdf/utils/: utils_cdl.py  utils_general.py  utils_hdf5.py  utils_netcdf.py  utils_um.py  utils_xarray.py  utils_zarr.py
src/xnetcdf/: __init__.py  xnetcdf.py
src/xnetcdf/utils/: __init__.py  utils_cdl.py  utils_general.py  utils_h5py.py  utils_hdf5.py  utils_netCDF4.py  utils_netcdf.py  utils_netcdf_file.py  utils_ppfive.py  utils_pyfive.py  utils_um.py  utils_xarray.py  utils_zarr.py
tests/: conftest.py  test_api.py  test_backends.py  test_h5netcdf.py  test_p5netcdf.py  test_p5netcdf_api.py  test_p5netcdf_general.py  test_p5netcdf_h5netcdf.py
tests/data/: test.nc  test1.kerchunk  test1.nc3
tests/data/test.zarr3/: zarr.json
tests/data/test.zarr3/forecast/lon/: zarr.json
tests/data/test.zarr3/forecast/lon_bnds/: zarr.json
tests/data/test.zarr3/forecast/lon_bnds/c/0/: 0
tests/data/test.zarr3/forecast/lon_bnds/c/1/: 0
tests/data/test.zarr3/forecast/lon_bnds/c/2/: 0
tests/data/test.zarr3/forecast/model/: zarr.json
tests/data/test.zarr3/forecast/model/lat/: zarr.json
tests/data/test.zarr3/forecast/model/lat_bnds/: zarr.json
tests/data/test.zarr3/forecast/model/q/: zarr.json
tests/data/test.zarr3/time/: c  zarr.json
(+8 files in other folders)
